# YouTube

./: .gitignore  start_local.sh
s3/: .env.sample  .gitignore  README.md  docker-compose-dev.yaml  docker-compose-local.yaml  pyproject.toml
s3/src/: main.py  router.py  s3.py  settings.py
users/: .env.example  docker-compose-local.yaml  pyproject.toml
users/src/: config.py  dao.py  database.py  exceptions.py  global_utils.py  main.py
users/src/migrations/: env.py
users/src/migrations/versions/: 2024_06_06_2227-c58cd2778a0c_initial.py
users/src/users/: __init__.py  dao.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
videos/: .env.example  .pylintrc  Dockerfile  docker-compose-dev.yaml  docker-compose-local.yaml  pyproject.toml
videos/src/: celery.py  config.py  constants.py  dao.py  database.py  exceptions.py  global_utils.py  main.py  service.py
videos/src/migrations/: env.py
videos/src/migrations/versions/: 2024_06_07_1830-1da9ea5847a4_initial.py  2024_06_08_0850-2650aae7c776_address_type_fix.py  2024_06_11_0848-2e9e6daf06c1_user_tags.py  2024_06_11_1458-5ec2aba2f0d0_url_added_to_video.py
videos/src/recomendations/: dao.py  models.py  router.py  schemas.py  service.py
videos/src/videos/: dao.py  models.py  router.py  schemas.py  service.py
videos/tests/: conftest.py
videos/tests/recomendations/: recomendations_tests.py
