[tool.poetry]
name = "s3"
version = "0.1.0"
description = ""
authors = ["5alex52 <alkurkovsk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
gunicorn = "^21.2.0"
uvicorn = "^0.27.1"
pydantic-settings = "^2.2.0"
boto3 = "^1.34.44"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

